# django-shop-project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  merge_production_dotenvs_in_dotenv.py  pyproject.toml  tree_structure.py
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
remi_shop/: conftest.py
remi_shop/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
remi_shop/static/css/: project.css  shop.css
remi_shop/static/js/: basket.js  project.js  shop.js
remi_shop/templates/: base.html
remi_shop/templates/admin/: max_price_filter.html  min_price_filter.html
remi_shop/templates/shop/: base.html  basket.html  category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  image_category_confirm_delete.html  image_category_form.html  image_product_confirm_delete.html  image_product_form.html  order_detail.html  order_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  promotion_confirm_delete.html  promotion_detail.html  promotion_list.html  start_page.html  tag_confirm_delete.html  tag_detail.html  tag_form.html  tag_list.html
remi_shop/users/: adapters.py  apps.py  models.py  views.py
remi_shop/users/api/: serializers.py  views.py
remi_shop/users/migrations/: 0001_initial.py
remi_shop/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
remi_shop/users/tests/api/: test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
shop/: admin.py  admin_filter.py  basket.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py
shop/migrations/: 0001_create_model_Basket.py  0002_create_model_Category.py  0003_create_model_ImageCategory.py  0004_create_model_Product.py  0005_create_model_ImageProduct.py  0006_create_model_Tag.py  0007_create_model_Promotion.py  0008_create_model_BasketItem.py  0009_create_model_Order.py  0010_create_model_OrderItem.py  0011_update_some_models.py  0012_drop_M2M_autogen_table.py  0013_create_M2M_between_Products_and_Promotions.py  0014_add_related_name_in_promotion_product.py
