[tool.poetry]
name = "remi-shop"
version = "0.1.0"
description = "Test Shop"
authors = ["Sumin Ivan <sumin.ivan01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

# Основные пакеты
python-slugify = "8.0.4"
Pillow = "11.3.0"
rcssmin = "1.1.2"
argon2-cffi = "25.1.0"
whitenoise = "6.9.0"
redis = "6.4.0"
hiredis = "3.2.1"
celery = "5.5.3"
django-celery-beat = "2.8.1"
flower = "2.0.1"
uvicorn = { version = "0.35.0", extras = ["standard"] }
uvicorn-worker = "0.3.0"

# Django
django = "5.2.6"
django-environ = "0.12.0"
django-model-utils = "5.0.0"
django-allauth = { version = "65.11.1", extras = ["mfa"] }
django-crispy-forms = "2.4"
crispy-bootstrap5 = "2025.6"
django-compressor = "4.5.1"
django-redis = "6.0.0"
django-mptt = "^0.18.0"
django-filter = "^25.1"

# Django REST Framework
djangorestframework = "3.16.1"
django-cors-headers = "4.7.0"
drf-spectacular = "0.28.0"

[tool.poetry.group.dev.dependencies]
Werkzeug = { version = "3.1.3", extras = ["watchdog"] }
ipdb = "0.13.13"
psycopg = { version = "3.2.9", extras = ["binary"] }
watchfiles = "1.1.0"

# Testing
mypy = "1.17.1"
django-stubs = { version = "5.2.2", extras = ["compatible-mypy"] }
pytest = "8.4.2"
pytest-sugar = "1.1.1"
djangorestframework-stubs = "3.16.2"

# Documentation
sphinx = "8.2.3"
sphinx-autobuild = "2025.8.25"

# Code quality
ruff = "0.12.12"
coverage = "7.10.6"
djlint = "1.36.4"
pre-commit = "4.3.0"

# Django extras
factory-boy = "3.3.3"
django-debug-toolbar = "6.0.0"
django-extensions = "4.1"
django-coverage-plugin = "3.1.1"
pytest-django = "4.11.1"

[tool.poetry.group.prod.dependencies]
gunicorn = "23.0.0"
psycopg = { version = "3.2.9", extras = ["binary"] }
django-anymail = "13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["remi_shop/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF001", # Игнорирование киррилицы
  "RUF002", # Игнорирование киррилицы
  "RUF003", # Игнорирование киррилицы
  "COM812",
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
